<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FP_W1_Module">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:id="@+id/v1"
            android:background="@drawable/bg_content1"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:navigationIcon="@drawable/back"/>

        <TextView
            android:textSize="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/toolbar"
            android:textColor="#ffff"
            android:id="@+id/heading"
            android:fontFamily="@font/arial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="Future Planning"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Subheading1"
            android:layout_below="@+id/heading"
            android:fontFamily="@font/arial"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="#666666"
            android:text="Insurance"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:layout_below="@+id/Subheading1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textColor="#000000"
            android:text="@string/fp_w4_t1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img4_1"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img4_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text2"
            android:layout_below="@+id/img4_1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textColor="#000000"
            android:text="@string/fp_w4_t2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img4_2"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img4_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text3"
            android:layout_below="@+id/img4_2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textColor="#000000"
            android:text="@string/fp_w4_t3"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img4_3"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img4_3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text4"
            android:layout_below="@+id/img4_3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textColor="#000000"
            android:text="@string/fp_w4_t4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Subheading2"
            android:layout_below="@+id/text4"
            android:fontFamily="@font/arial"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="#666666"
            android:text="Books related to financial planning"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text5"
            android:layout_below="@+id/Subheading2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textColor="#000000"
            android:text="@string/fp_w4_t5"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img4_4"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img4_4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text6"
            android:layout_below="@+id/img4_4"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textColor="#000000"
            android:text="@string/fp_w4_t6"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/img4_5"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text6"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img4_5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text7"
            android:layout_below="@+id/img4_5"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:justificationMode="inter_word"
            android:textSize="15dp"
            android:textColor="#000000"
            android:text="@string/fp_w4_t7"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img4_6"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text7"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img4_6"/>



    </RelativeLayout>

</ScrollView>